# Research_Agent

./: main.py  pyproject.toml  simple_agent.py
src/: firecrawl.py  models.py  prompts.py  workflow.py
